--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,13 +13,14 @@ pipeline {
 
     stage('Build Dacpac') {
       steps {
-        echo 'No converter for Builder: hudson.plugins.msbuild.MsBuildBuilder'
+        bat "\"${tool name: 'Default', type: 'msbuild'}\" /p:Configuration=Release"
+        gci $ENV:WORKSPACE -rec
       }
     }
 
     stage('Publish to Nuget') {
       steps {
-        echo 'No converter for Builder: hudson.plugins.powershell.PowerShell'
+        echo 'Todo: publish to nuget'
       }
     }
 
