--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,7 +24,7 @@ pipeline {
 
     stage('Publish to Nexus') {
       steps {
-        echo "$ENV:ProjectName"
+        echo "${ProjectName}"
         sh '''#!/bin/bash
             curl -v -u jenkins-user:A*69@%Y_kBwe75f --upload-file $ENV:WORKSPACE\$ENV:ProjectName\bin\release\$ENV:ProjectName.dacpac http://localhost:8081/repository/msbuild-drop/$ENV:ProjectName/$ENV:BUILD_ID/$ENV:ProjectName.dacpac'
         '''
