--- a/JenkinsFile
+++ b/JenkinsFile
@@ -25,9 +25,7 @@ pipeline {
     stage('Publish to Nexus') {
       steps {
         echo "${ProjectName}"
-        sh '''#!/bin/bash
-            echo "${ProjectName}"            
-        '''
+        sh 'printenv'
       }
     }
 
