--- a/JenkinsFile
+++ b/JenkinsFile
@@ -25,7 +25,9 @@ pipeline {
     stage('Publish to Nexus') {
       steps {
         echo "${ProjectName}"
-        powershell 'curl.exe -v -u jenkins-user:A*69@%Y_kBwe75f --upload-file ./$ProjectName/bin/release/$ProjectName.dacpac http://localhost:8081/repository/msbuild-drop/$ProjectName/$ENV:BUILD_ID/$ProjectName.dacpac'
+        powershell 'Write-Host $(ProjectName)'
+        powershell 'Write-Host $ProjectName'
+        powershell 'Write-Host ${ProjectName}'
       }
     }
 
