--- a/JenkinsFile
+++ b/JenkinsFile
@@ -25,7 +25,8 @@ pipeline {
     stage('Publish to Nexus') {
       steps {
         echo "${ProjectName}"
-        powershell "curl.exe -v -u jenkins-user:A*69@%Y_kBwe75f --upload-file ./${ProjectName}/bin/release/${ProjectName}.dacpac http://localhost:8081/repository/msbuild-drop/${ProjectName}/$ENV:BUILD_ID/${ProjectName}.dacpac"
+        echo "$ENV:BUILD_NUMBER"
+        powershell "curl.exe -v -u jenkins-user:A*69@%Y_kBwe75f --upload-file ./${ProjectName}/bin/release/${ProjectName}.dacpac http://localhost:8081/repository/msbuild-drop/${ProjectName}/${ENV:BUILD_ID}/${ProjectName}.dacpac"
       }
     }
 
